--- a/index.html
+++ b/index.html
@@ -10,20 +10,22 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+  <header class="site-nav-wrap" aria-label="Main site navigation">
+    <nav class="site-nav">
+      <a class="site-brand" href="index.html" aria-label="TONIE_TECH home">
+        <img class="site-brand-logo" src="ChatGPT Image Feb 22, 2026, 11_39_29 PM.png" alt="TONIE_TECH logo" />
+      </a>
+      <div class="site-links">
+        <a href="index.html" aria-current="page">Home</a>
+        <a href="about.html">About</a>
+        <a href="services.html">Services</a>
+        <a class="site-link-cta" href="contact.html">Contact Us</a>
+      </div>
+    </nav>
+  </header>
+
   <section class="tonie-hero" aria-label="TONIE_TECH Company intro section">
     <div class="hero-shell">
-      <header class="hero-nav">
-        <a class="brand" href="#" aria-label="TONIE_TECH home">
-          <img class="brand-logo" src="ChatGPT Image Feb 22, 2026, 11_39_29 PM.png" alt="TONIE_TECH logo" />
-        </a>
-        <nav class="nav-links" aria-label="Main navigation">
-          <a href="index.html">Home</a>
-          <a href="about.html">About</a>
-          <a href="services.html">Services</a>
-          <a class="nav-cta" href="contact.html">Contact Us</a>
-        </nav>
-      </header>
-
       <div class="hero-copy">
         <p class="company-tag">TONIE_TECH COMPANY</p>
         <h1>
@@ -94,5 +96,3 @@
   <script src="animations.js" defer></script>
 </body>
 </html>
-
-
