--- a/about.html
+++ b/about.html
@@ -10,19 +10,22 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+  <header class="site-nav-wrap" aria-label="Main site navigation">
+    <nav class="site-nav">
+      <a class="site-brand" href="index.html" aria-label="TONIE_TECH home">
+        <img class="site-brand-logo" src="ChatGPT Image Feb 22, 2026, 11_39_29 PM.png" alt="TONIE_TECH logo" />
+      </a>
+      <div class="site-links">
+        <a href="index.html">Home</a>
+        <a href="about.html" aria-current="page">About</a>
+        <a href="services.html">Services</a>
+        <a class="site-link-cta" href="contact.html">Contact Us</a>
+      </div>
+    </nav>
+  </header>
+
   <section class="about-section" aria-label="About TONIE_TECH">
     <div class="about-shell">
-      <header class="hero-nav">
-        <a class="brand" href="index.html" aria-label="TONIE_TECH home">
-          <img class="brand-logo" src="ChatGPT Image Feb 22, 2026, 11_39_29 PM.png" alt="TONIE_TECH logo" />
-        </a>
-        <nav class="nav-links" aria-label="Main navigation">
-          <a href="index.html">Home</a>
-          <a href="about.html">About</a>
-          <a href="services.html">Services</a>
-          <a class="nav-cta" href="contact.html">Contact Us</a>
-        </nav>
-      </header>
       <p class="about-tag">ABOUT US</p>
       <h1 class="about-title">Building Digital Solutions That Help Businesses Grow</h1>
 
