--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
   <section class="tonie-hero" aria-label="TONIE_TECH Company intro section">
     <div class="hero-shell">
       <div class="hero-copy">
-        <p class="company-tag">TONIE_TECH COMPANY</p>
+        <div class="company-tag company-tag-marquee" aria-label="TONIE_TECH COMPANY">
+          <span class="marquee-aura" aria-hidden="true"></span>
+          <span class="marquee-spark" aria-hidden="true"></span>
+          <span class="marquee-track">TONIE_TECH COMPANY • TONIE_TECH COMPANY • TONIE_TECH COMPANY • </span>
+        </div>
         <h1>
           Innovating the Future,  <span>with Technology</span><br />
           The time is Now.....
