--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
       <a class="site-brand" href="index.html" aria-label="TONIE_TECH home">
         <img class="site-brand-logo" src="ChatGPT Image Feb 22, 2026, 11_39_29 PM.png" alt="TONIE_TECH logo" />
       </a>
-      <div class="site-links">
+      <button class="site-nav-toggle" type="button" aria-expanded="false" aria-controls="site-links-menu" aria-label="Toggle navigation menu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+      <div class="site-links" id="site-links-menu">
         <a href="index.html" aria-current="page">Home</a>
         <a href="about.html">About</a>
         <a href="services.html">Services</a>
