--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700;800&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="styles.css" />
 </head>
-<body>
+<body class="home-page">
   <header class="site-nav-wrap" aria-label="Main site navigation">
     <nav class="site-nav">
       <a class="site-brand" href="index.html" aria-label="TONIE_TECH home">
