--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -134,32 +134,33 @@
     </div>
   </section>
   <footer class="site-footer" aria-label="Site footer">
-    <div class="footer-shell">
-      <div class="footer-col footer-brand">
+    <section class="footer-shell">
+      <section class="footer-col footer-brand">
         <img class="footer-logo" src="ChatGPT Image Feb 22, 2026, 11_39_29 PM.png" alt="TONIE_TECH logo" />
         <p class="footer-name">TONIE_TECH</p>
         <p class="footer-text">We build modern websites and digital solutions for growing businesses.</p>
-      </div>
+      </section>
 
-      <div class="footer-col">
+      <section class="footer-col">
         <h2>Contact</h2>
         <p><a href="mailto:c.tonie2007@gmail.com">c.tonie2007@gmail.com</a></p>
         <p><a href="tel:+254762220299">+254 762 220 299</a></p>
-        <p>Kitui, Kenya</p>
-      </div>
+        <p>Nairobi, Kenya</p>
+      </section>
 
-      <div class="footer-col">
+      <section class="footer-col">
         <h2>Quick Links</h2>
         <p><a href="index.html">Home</a></p>
         <p><a href="about.html">About</a></p>
         <p><a href="services.html">Services</a></p>
         <p><a href="contact.html">Contact</a></p>
-      </div>
-    </div>
+      </section>
+    </section>
   </footer>
   <script src="animations.js" defer></script>
 </body>
 </html>
+
 
 
 
