--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700;800&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="styles.css" />
 </head>
-<body class="home-page">
+<body class="home-page home-layout-alt home-layout-polish">
   <header class="site-nav-wrap" aria-label="Main site navigation">
     <nav class="site-nav">
       <a class="site-brand" href="index.html" aria-label="TONIE_TECH home">
@@ -29,78 +29,94 @@
     </nav>
   </header>
 
-  <section class="tonie-hero" aria-label="TONIE_TECH Company intro section">
-    <div class="hero-shell">
-      <div class="hero-copy">
-        <div class="company-tag company-tag-marquee" aria-label="TONIE_TECH COMPANY">
-          <span class="marquee-aura" aria-hidden="true"></span>
-          <span class="marquee-spark" aria-hidden="true"></span>
-          <span class="marquee-track">TONIE_TECH COMPANY • TONIE_TECH COMPANY • TONIE_TECH COMPANY • </span>
-        </div>
-        <h1>
-          Innovating the Future,  <span>with Technology</span><br />
-          The time is Now.....
-        </h1>
-        <p class="subtext">
-    
-          We Build Modern Websites & Digital Solutions for Growing Businesses.
-        </p>
-        <a class="cta-btn" href="services.html">Go Digital Now</a>
-      </div>
+  <main class="home-main" aria-label="Homepage content">
+    <section class="showcase-window" aria-label="TONIE_TECH showcase layout">
+      <header class="showcase-bar">
+        <p class="showcase-brand" style="font-size: 25px;font-style: italic;color: aqua;">TONIE_TECH</p>
+        <nav class="showcase-menu" aria-label="Homepage quick navigation">
 
-      <div class="hero-cards" aria-hidden="true">
-        <article class="card card-small"></article>
-        <article class="card card-large"></article>
-        <article class="card card-medium"></article>
-        <article class="card card-small"></article>
-      </div>
-    </div>
-  </section>
+        </nav>
+          <p class="company-tag company-tag-marquee" aria-label="TONIE_TECH COMPANY">
+            <span class="marquee-aura" aria-hidden="true"></span>
+            <span class="marquee-spark" aria-hidden="true"></span>
+            <span class="marquee-track">TONIE_TECH COMPANY &#8226; TONIE_TECH COMPANY &#8226; TONIE_TECH COMPANY &#8226; </span>
+          </p>
+          <h1>
+            Innovating the Future, <span>with Technology</span><br />
+            The time is Now.....
+          </h1>
+          <p class="subtext">We Build Modern Websites & Digital Solutions for Growing Businesses.</p>
+          <a class="cta-btn" href="services.html">Go Digital Now</a>
 
-  <section class="trust-section" aria-label="Why clients trust TONIE_TECH">
-    <div class="trust-shell">
-      <p class="trust-tag">TRUSTED BY GROWING BRANDS</p>
-      <h2>Why teams choose TONIE_TECH</h2>
-      <div class="trust-grid">
-        <article class="trust-card">
-          <h3>10+</h3>
-          <p>Projects delivered successfully across web and digital platforms.</p>
+          <section class="feature-grid" aria-label="Service highlights">
+            <article class="feature-pill">Responsive Websites</article>
+            <article class="feature-pill">Future-ready tech</article>
+            <article class="feature-pill">Custom solutions</article>
+            <article class="feature-pill">24/7 support</article>
+          </section>
         </article>
-        <article class="trust-card">
-          <h3>98%</h3>
-          <p>Client satisfaction rate with long-term support and maintenance.</p>
+
+        <article class="showcase-panel showcase-panel-left">
+          <p class="panel-tag">TONIE_TECH Explained</p>
+          <h2>Built for growing brands</h2>
+          <p>Modern websites, reliable support, and digital systems that help your business move faster.</p>
+          
         </article>
-        <article class="trust-card">
-          <h3>24/7</h3>
-          <p>Technical monitoring and rapid response for mission-critical systems.</p>
+
+        <article class="showcase-panel showcase-panel-right">
+          <p class="panel-tag">Analytics</p>
+          <h2>Performance at a glance</h2>
+          <p>98% client satisfaction backed by practical delivery, long-term maintenance, and rapid response.</p>
+          <p class="panel-metric">98%</p>
         </article>
-      </div>
-    </div>
-  </section>
+      </section>
+
+      <section class="trust-section" aria-label="Why clients trust TONIE_TECH">
+        <article class="trust-shell">
+          <p class="trust-tag">TRUSTED BY GROWING BRANDS</p>
+          <h2>Why teams choose TONIE_TECH</h2>
+          <section class="trust-grid">
+            <article class="trust-card">
+              <h3>10+</h3>
+              <p>Projects delivered successfully across web and digital platforms.</p>
+            </article>
+            <article class="trust-card">
+              <h3>98%</h3>
+              <p>Client satisfaction rate with long-term support and maintenance.</p>
+            </article>
+            <article class="trust-card">
+              <h3>24/7</h3>
+              <p>Technical monitoring and rapid response for mission-critical systems.</p>
+            </article>
+          </section>
+        </article>
+      </section>
+    </section>
+  </main>
 
   <footer class="site-footer" aria-label="Site footer">
-    <div class="footer-shell">
-      <div class="footer-col footer-brand">
+    <section class="footer-shell">
+      <section class="footer-col footer-brand">
         <img class="footer-logo" src="ChatGPT Image Feb 22, 2026, 11_39_29 PM.png" alt="TONIE_TECH logo" />
         <p class="footer-name">TONIE_TECH</p>
         <p class="footer-text">We build modern websites and digital solutions for growing businesses.</p>
-      </div>
+      </section>
 
-      <div class="footer-col">
+      <section class="footer-col">
         <h2>Contact</h2>
         <p><a href="mailto:c.tonie2007@gmail.com">c.tonie2007@gmail.com</a></p>
         <p><a href="tel:+254762220299">+254 762 220 299</a></p>
         <p>Nairobi, Kenya</p>
-      </div>
+      </section>
 
-      <div class="footer-col">
+      <section class="footer-col">
         <h2>Quick Links</h2>
         <p><a href="index.html">Home</a></p>
         <p><a href="about.html">About</a></p>
         <p><a href="services.html">Services</a></p>
         <p><a href="contact.html">Contact</a></p>
-      </div>
-    </div>
+      </section>
+    </section>
   </footer>
   <script src="animations.js" defer></script>
 </body>
