--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700;800&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="styles.css" />
 </head>
-<body class="home-page home-layout-alt home-layout-polish">
+<body class="home-page home-layout-v4">
   <header class="site-nav-wrap" aria-label="Main site navigation">
     <nav class="site-nav">
       <a class="site-brand" href="index.html" aria-label="TONIE_TECH home">
@@ -30,45 +30,29 @@
   </header>
 
   <main class="home-main" aria-label="Homepage content">
-    <section class="showcase-window" aria-label="TONIE_TECH showcase layout">
-      <header class="showcase-bar">
-        <p class="showcase-brand" style="font-size: 25px;font-style: italic;color: aqua;">TONIE_TECH</p>
-        <nav class="showcase-menu" aria-label="Homepage quick navigation">
-
-        </nav>
+    <section class="home-v4" aria-label="TONIE_TECH showcase layout">
+      <section class="hero-shell v4-hero" aria-label="Main hero content">
+        <article class="hero-copy">
           <p class="company-tag company-tag-marquee" aria-label="TONIE_TECH COMPANY">
             <span class="marquee-aura" aria-hidden="true"></span>
             <span class="marquee-spark" aria-hidden="true"></span>
-            <span class="marquee-track">TONIE_TECH COMPANY &#8226; TONIE_TECH COMPANY &#8226; TONIE_TECH COMPANY &#8226; </span>
+            <span class="marquee-track">TONIE_TECH COMPANY &#8226; TONIE_TECH COMPANY &#8226; TONIE_TECH COMPANY &#8226;</span>
           </p>
-          <h1>
-            Innovating the Future, <span>with Technology</span><br />
-            The time is Now.....
-          </h1>
+          <h1>Innovating the Future, <span>with Technology</span><br />.The time is Now.....</h1>
           <p class="subtext">We Build Modern Websites & Digital Solutions for Growing Businesses.</p>
           <a class="cta-btn" href="services.html">Go Digital Now</a>
-
-          <section class="feature-grid" aria-label="Service highlights">
-            <article class="feature-pill">Responsive Websites</article>
-            <article class="feature-pill">Future-ready tech</article>
-            <article class="feature-pill">Custom solutions</article>
-            <article class="feature-pill">24/7 support</article>
-          </section>
         </article>
 
-        <article class="showcase-panel showcase-panel-left">
-          <p class="panel-tag">TONIE_TECH Explained</p>
-          <h2>Built for growing brands</h2>
-          <p>Modern websites, reliable support, and digital systems that help your business move faster.</p>
-          
-        </article>
-
-        <article class="showcase-panel showcase-panel-right">
-          <p class="panel-tag">Analytics</p>
-          <h2>Performance at a glance</h2>
-          <p>98% client satisfaction backed by practical delivery, long-term maintenance, and rapid response.</p>
-          <p class="panel-metric">98%</p>
-        </article>
+        <aside class="v4-side" aria-label="Key benefits">
+          <article class="v4-chip">Responsive Websites</article>
+          <article class="v4-chip">Future-ready tech</article>
+          <article class="v4-chip">Custom solutions</article>
+          <article class="v4-chip">24/7 support</article>
+          <article class="v4-stat">
+            <p class="v4-stat-label">Client Satisfaction</p>
+            <p class="v4-stat-value">98%</p>
+          </article>
+        </aside>
       </section>
 
       <section class="trust-section" aria-label="Why clients trust TONIE_TECH">
