--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -31,18 +31,12 @@
 
   <main class="home-main" aria-label="Homepage content">
     <section class="home-v4" aria-label="TONIE_TECH showcase layout">
-      <section class="hero-shell v4-hero" aria-label="Main hero content">
-        <article class="hero-copy">
-          <p class="company-tag company-tag-marquee" aria-label="TONIE_TECH COMPANY">
-            <span class="marquee-aura" aria-hidden="true"></span>
-            <span class="marquee-spark" aria-hidden="true"></span>
-            <span class="marquee-track">TONIE_TECH COMPANY &#8226; TONIE_TECH COMPANY &#8226; TONIE_TECH COMPANY &#8226;</span>
-          </p>
-          <h1>Innovating the Future, <span>with Technology</span><br />.The time is Now.....</h1>
-          <p class="subtext">We Build Modern Websites & Digital Solutions for Growing Businesses.</p>
-          <a class="cta-btn" href="services.html">Go Digital Now</a>
-        </article>
+      <article class="v4-top-copy" aria-label="Main message">
+        <h1>Innovating the Future, <span>with Technology</span><br />The time is Now.....</h1>
+        <p>We Build Modern Websites & Digital Solutions for Growing Businesses.</p>
+      </article>
 
+      <section class="hero-shell v4-hero" aria-label="Key benefits and stats">
         <aside class="v4-side" aria-label="Key benefits">
           <article class="v4-chip">Responsive Websites</article>
           <article class="v4-chip">Future-ready tech</article>
