--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -32,7 +32,7 @@
   <main class="home-main" aria-label="Homepage content">
     <section class="home-v4" aria-label="TONIE_TECH showcase layout">
       <article class="v4-top-copy" aria-label="Main message">
-        <h1>Innovating the Future, <span>with Technology</span><br />The time is Now.....</h1>
+        <h1>Innovating the Future, <span>with Technology</span><br />.   The time is Now.....</h1>
         <p>We Build Modern Websites & Digital Solutions for Growing Businesses.</p>
       </article>
 
